runner/tester/py/output/checkoutservice-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: checkoutservice-lb
  namespace: default
spec:
  host: checkoutservice.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
