runner/tester/py/output/currencyservice-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: currencyservice-lb
  namespace: default
spec:
  host: currencyservice.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
